<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">
    <include
        android:id="@+id/layout_bar"
        layout="@layout/include_back_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"/>
    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_below="@id/layout_bar"
        android:layout_marginTop="@dimen/view_height"
        android:layout_width="@dimen/content_height"
        android:layout_height="@dimen/content_height"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_icon"
        />
    <TextView
        android:id="@+id/tv_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/my_lab_appinfo"
        android:layout_below="@id/iv_app_icon"/>
    <View
        android:id="@+id/cutline_top"
        android:layout_marginTop="@dimen/view_height"
        android:layout_below="@id/tv_app_info"
        style="@style/cutline.h"/>
    <TextView
        android:id="@+id/tv_weibo"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin"
        android:layout_height="@dimen/min_view_height"
        android:text="@string/my_lab_weibo"
        android:layout_below="@id/cutline_top"
        />
    <View
        android:layout_below="@+id/tv_weibo"
        style="@style/cutline.h"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/my_lab_copyright"
        android:gravity="center"
        android:layout_marginBottom="@dimen/content_height"/>
</RelativeLayout>