<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">
    <include
        android:id="@+id/layout_bar"
        layout="@layout/include_back_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        />
    <View
        style="@style/cutline.h.padding"
        android:layout_height="@dimen/padding_double"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_tip_avator"
            android:textSize="@dimen/eightSize"
            android:layout_centerVertical="true"
            />
        <include
            android:id="@+id/iv_avator"
            layout="@layout/include_simpledraweeview"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_avator"
            android:src="@mipmap/ic_loading0"
            android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            style="@style/cutline.h"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_tip_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tip_nickname"
                android:textSize="@dimen/eightSize"
                />
            <TextView
                android:id="@+id/tv_name"
                android:layout_toRightOf="@+id/tv_tip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/my_tip_nickname"
                android:gravity="right"
                android:textSize="@dimen/eightSize"
                />
        </RelativeLayout>
    </LinearLayout>
    <View
        style="@style/cutline.h.padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_tip_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tip_sex"
                android:textSize="@dimen/eightSize"
                />
            <TextView
                android:id="@+id/tv_sex"
                android:layout_toRightOf="@+id/tv_tip_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/my_lab_sex_man"
                android:gravity="right"
                android:textSize="@dimen/eightSize"
                />
        </RelativeLayout>
        <View
            style="@style/cutline.h"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_tip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tip_address"
                android:textSize="@dimen/eightSize"
                />
            <TextView
                android:id="@+id/tv_address"
                android:layout_toRightOf="@+id/tv_tip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_tip_address"
                android:singleLine="true"
                android:gravity="right"
                android:textSize="@dimen/eightSize"
                />
        </RelativeLayout>
        <View
            style="@style/cutline.h"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_tip_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tip_birthday"
                android:textSize="@dimen/eightSize"
                />
            <TextView
                android:id="@+id/tv_birthday"
                android:layout_toRightOf="@+id/tv_tip_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/my_tip_birthday"
                android:gravity="right"
                android:textSize="@dimen/eightSize"
                />
        </RelativeLayout>
    </LinearLayout>
    <View
        style="@style/cutline.h.padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_tip_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tip_height"
                android:textSize="@dimen/eightSize"
                />
            <TextView
                android:id="@+id/tv_height"
                android:layout_toRightOf="@+id/tv_tip_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/my_tip_height"
                android:gravity="right"
                android:textSize="@dimen/eightSize"
                />
        </RelativeLayout>
        <View
            style="@style/cutline.h"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_tip_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tip_weight"
                android:textSize="@dimen/eightSize"
                />
            <TextView
                android:id="@+id/tv_weight"
                android:layout_toRightOf="@+id/tv_tip_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/my_tip_weight"
                android:gravity="right"
                android:textSize="@dimen/eightSize"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:textSize="@dimen/eightSize"
            android:layout_height="@dimen/view_height"
            android:layout_gravity="center_vertical"
            android:text="@string/logout"
            android:background="@drawable/btn_basecolor_corner_small"
            />
    </LinearLayout>
</LinearLayout>