<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/img_my_bg">
            <FrameLayout
                android:id="@+id/layout_msg"
                android:layout_width="@dimen/view_height"
                android:layout_height="@dimen/view_height">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_msg"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_msg_count"
                    android:layout_width="@dimen/margin"
                    android:layout_height="@dimen/margin"
                    android:text="1"
                    android:textSize="@dimen/fourSize"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/padding"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/bg_message"
                    android:layout_gravity="right|top"
                    android:textColor="@color/white"/>
            </FrameLayout>
            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="@dimen/view_height"
                android:layout_height="@dimen/view_height"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_share"/>
            <include
            android:id="@+id/iv_avator"
            layout="@layout/include_simpledraweeview"
            android:layout_width="@dimen/content_height"
            android:layout_height="@dimen/content_height"
            android:background="@drawable/bg_avator"
            android:src="@mipmap/ic_loading0"
            android:layout_below="@+id/layout_msg"
            android:layout_margin="@dimen/margin"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_avator"
                android:layout_alignTop="@id/iv_avator"
                android:layout_marginTop="@dimen/padding"
                android:text="Fun蜗牛"
                android:textSize="@dimen/eightSize"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_name"
                android:layout_below="@id/tv_name"
                android:layout_marginTop="@dimen/padding"
                android:text="男"
                android:textSize="@dimen/sevenSize"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_name"
                android:layout_below="@id/tv_sex"
                android:layout_marginTop="@dimen/padding"
                android:text="北京 海淀"
                android:textSize="@dimen/sevenSize"
                android:singleLine="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/paddingX4"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin"
            android:text="个人资料"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/back_width"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_age"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="年龄\n18"
                android:gravity="center"/>
            <View
                style="@style/cutline.v"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                />
            <TextView
                android:id="@+id/tv_height"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="身高\n180cm"/>
            <View
                style="@style/cutline.v"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                />
            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="体重\n70kg"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/paddingX4"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin"
            android:text="已加入俱乐部"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <include
                layout="@layout/include_simpledraweeview"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_width"
                android:layout_margin="@dimen/margin"
                android:src="@mipmap/ic_loading1"
                android:background="@color/background"
                />
            <TextView
                android:id="@+id/tv_club_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fun蜗牛"
                android:textSize="@dimen/eightSize"
                android:layout_gravity="center_vertical"
                android:singleLine="true"/>
        </LinearLayout>
        <View
            style="@style/cutline.h.padding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:text="@string/my_lab_apply_exit"
            android:paddingLeft="@dimen/margin"
            android:gravity="center_vertical"
            />
        <View
            style="@style/cutline.h"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:text="@string/my_lab_recommend"
            android:paddingLeft="@dimen/margin"
            android:gravity="center_vertical"
            />
        <View
                style="@style/cutline.h.padding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:text="@string/my_lab_feedback"
            android:paddingLeft="@dimen/margin"
            android:gravity="center_vertical"
            />
        <View
            style="@style/cutline.h"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:text="@string/my_lab_about"
            android:paddingLeft="@dimen/margin"
            android:gravity="center_vertical"
            />
        <View
            style="@style/cutline.h"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_view_height"
            android:text="@string/my_lab_version"
            android:paddingLeft="@dimen/margin"
            android:gravity="center_vertical"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="@dimen/padding"
            android:background="@color/background"/>
    </LinearLayout>
    </ScrollView>

</LinearLayout>